--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         android:layout_below="@+id/app_name"
         android:layout_centerHorizontal="true"
         android:background="@color/Orange1"
+        android:onClick="toastSS"
         />
     <Button
         android:layout_width="280dp"
@@ -43,6 +44,7 @@
         android:layout_below="@+id/app_name"
         android:layout_centerHorizontal="true"
         android:background="@color/Orange2"
+        android:onClick="toastSA"
         />
     <Button
         android:layout_width="280dp"
@@ -54,6 +56,7 @@
         android:layout_below="@+id/app_name"
         android:layout_centerHorizontal="true"
         android:background="@color/Orange3"
+        android:onClick="toastLA"
         />
     <Button
         android:layout_width="280dp"
@@ -65,6 +68,7 @@
         android:layout_below="@+id/app_name"
         android:layout_centerHorizontal="true"
         android:background="@color/Orange4"
+        android:onClick="toastBIB"
         />
     <Button
         android:layout_width="280dp"
@@ -76,6 +80,7 @@
         android:layout_below="@+id/app_name"
         android:layout_centerHorizontal="true"
         android:background="@color/Orange5"
+        android:onClick="toastXYZR"
         />
     <Button
         android:layout_width="280dp"
@@ -87,5 +92,6 @@
         android:layout_below="@+id/app_name"
         android:layout_centerHorizontal="true"
         android:background="@color/Orange6"
+        android:onClick="toastCS"
         />
 </RelativeLayout>
